Refactor of segment playback actions